View Issue Details

IDProjectCategoryView StatusLast Update
0033391Open CASCADEOCCT:Codingpublic2023-06-05 20:00
Reporterdpasukhi Assigned Todpasukhi  
PrioritynormalSeverityminor 
Status verifiedResolutionfixed 
Target Version7.7.2 
Summary0033391: Coding - Clearing old definition way for strcasecmp
Descriptionstrcasecmp was already defined in Standard_CString
Steps To ReproduceNot possible
TagsNo tags attached.
Test case number

Relationships

related to 0033379 verifieddpasukhi Coding - Processing Clang-15 warnings 

Activities

git

2023-05-22 14:54

administrator   ~0113572

Branch CR33391 has been created by dpasukhi.

SHA-1: 1a8d1fcbcc62726d2dda41c749f7bee53afc8af5


Detailed log of new commits:

Author: dpasukhi
Date: Mon May 22 12:53:10 2023 +0100

    0033391: Coding - Clearing old definition way for strcasecmp
    
    Removed artifacts for strcasecmp definitions

dpasukhi

2023-05-22 17:17

developer   ~0113573

Dear ika,
please review CR33391

All tests are OK, see:
http://jenkins-test-10.nnov.opencascade.com/view/CR33391-master-dpasukhi/view/OCCT%20compile/

I remove old way to define "strcasecmp " and its artefacts, because strcasecmp was already defined in Standard_CString

ika

2023-05-29 14:35

developer   ~0113597

No remarks.

Dear bugmaster, please integrate
OCCT: CR33391

vglukhik

2023-06-05 19:57

administrator   ~0113614

Combination -
OCCT branch : IR-2023-06-02
Products branch : master
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Ubuntu2004-64:
OCCT
Total CPU difference: 17953.14000000039 / 17818.440000000253 [+0.76%]
Products
Total CPU difference: 11996.69000000001 / 11945.280000000024 [+0.43%]
Windows-64-VC142:
OCCT
Total CPU difference: 19638.703125 / 20590.0625 [-4.62%]
Products
Total CPU difference: 14005.421875 / 14674.03125 [-4.56%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2023-06-05 20:00

administrator   ~0113616

Branch CR33391 has been deleted by mnt.

SHA-1: 1a8d1fcbcc62726d2dda41c749f7bee53afc8af5

Related Changesets

occt: master 6aa053ae

2023-05-22 11:53:10

dpasukhi


Committer: jokwajeb Details Diff
0033391: Coding - Clearing old definition way for strcasecmp

Removed artifacts for strcasecmp definitions
Affected Issues
0033391
mod - src/BRepTest/BRepTest_FeatureCommands.cxx Diff File
mod - src/BRepTest/BRepTest_SurfaceCommands.cxx Diff File
mod - src/BRepTools/BRepTools_ShapeSet.cxx Diff File
mod - src/GeometryTest/GeometryTest_SurfaceCommands.cxx Diff File
mod - src/GeomliteTest/GeomliteTest_ModificationCommands.cxx Diff File
mod - src/ViewerTest/ViewerTest_FilletCommands.cxx Diff File

Issue History

Date Modified Username Field Change
2023-05-22 14:37 dpasukhi New Issue
2023-05-22 14:37 dpasukhi Assigned To => dpasukhi
2023-05-22 14:54 git Note Added: 0113572
2023-05-22 16:03 dpasukhi Status new => assigned
2023-05-22 17:16 dpasukhi Relationship added related to 0033379
2023-05-22 17:17 dpasukhi Assigned To dpasukhi => ika
2023-05-22 17:17 dpasukhi Status assigned => resolved
2023-05-22 17:17 dpasukhi Steps to Reproduce Updated
2023-05-22 17:17 dpasukhi Note Added: 0113573
2023-05-29 14:35 ika Assigned To ika => bugmaster
2023-05-29 14:35 ika Status resolved => reviewed
2023-05-29 14:35 ika Note Added: 0113597
2023-06-05 19:57 vglukhik Note Added: 0113614
2023-06-05 19:58 jokwajeb Changeset attached => occt master 6aa053ae
2023-06-05 19:58 dpasukhi Assigned To bugmaster => dpasukhi
2023-06-05 19:58 dpasukhi Status reviewed => verified
2023-06-05 19:58 dpasukhi Resolution open => fixed
2023-06-05 20:00 git Note Added: 0113616