0033391: Coding - Clearing old definition way for strcasecmp

Removed artifacts for strcasecmp definitions