src/GeomliteTest/GeomliteTest_ModificationCommands.cxx
@@ -34,7 +34,6 @@
 
 #ifdef _MSC_VER
 #include <stdio.h>
-//#define strcasecmp strcmp Already defined
 #endif
 
 
